--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- AR.jsライブラリ読み込み -->
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <!-- shaderライブラリ読み込み -->
-    <script src="0223.js"></script>
-    <script src="shader-grid-glitch.js"></script>
+    <script src="./0223.js"></script>
+    <script src="./shader-grid-glitch.js"></script>
 
     <!-- AFrameにAR.js紐付け -->
     <a-scene embedded arjs="debugUIEnabled:false;">
@@ -60,9 +60,9 @@
 
 
     <!-- 3Dモデル  -->
-<a-asset-item id="3DModel" src="Astronaut.obj"></a-asset-item>
+<a-asset-item id="3DModel" src="./Astronaut.obj"></a-asset-item>
 <!-- マテリアル -->
-<a-asset-item id="Material" src="Astronaut.mtl"></a-asset-item> 
+<a-asset-item id="Material" src="./Astronaut.mtl"></a-asset-item> 
 
 <a-marker type="pattern" url='./marker/pattern-leaves-4393918_640.patt'>
     <a-entity>
