--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
    <a-scene id="scene" embedded arjs="debugUIEnabled:false;">
-       <a-asset-item id="parkingObj" src="./obj/parking/Parking.obj"></a-asset-item>
-       <a-asset-item id="parkingMtl" src="./obj/parking/Parking.mtl"></a-asset-item>
+       <a-asset-item id="parkingObj" src="./obj/parking/ParkingLot.obj"></a-asset-item>
+       <a-asset-item id="parkingMtl" src="./obj/parking/ParkingLot.mtl"></a-asset-item>
        <a-marker preset="hiro" id="island" registerevents></a-marker>
        <a-entity camera></a-entity>
    </a-scene>
