--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <a-scene id="scene" embedded arjs="debugUIEnabled:false;">
        <a-asset-item id="parkingObj" src="./obj/parking/ParkingLot.obj"></a-asset-item>
        <a-asset-item id="parkingMtl" src="./obj/parking/ParkingLot.mtl"></a-asset-item>
-       <a-marker preset="hiro" id="island" registerevents></a-marker>
+       <a-marker type="pattern" id="island" registerevents src="marker/pattern-leaves-4393918_640.patt"></a-marker>
        <a-entity camera></a-entity>
    </a-scene>
    <script>
