--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                    scene.appendChild(parkingIns);
                    // objふぁいるとmtlファイルをa-obj-model要素に追加する
                    parkingIns.setAttribute("src", "#parkingObj");
-                   parkingIns.setAttribute("src", "#parkingMtl");
+                   parkingIns.setAttribute("mtl", "#parkingMtl");
                    // position, scale, positionの設定
                    parkingIns.setAttribute("position", "0 0 -0.07");
                     parkingIns.setAttribute("scale", "0.01 0.01 0.01");
