--- a/index.html
+++ b/index.html
@@ -9,38 +9,24 @@
      <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
      <!-- AR.jsライブラリ読み込み -->
      <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+     <script src="./js/0223-2.js"></script>
 </head>
 <body>
    <a-scene id="scene" embedded arjs="debugUIEnabled:false;">
        <a-asset-item id="parkingObj" src="./obj/parking/ParkingLot.obj"></a-asset-item>
        <a-asset-item id="parkingMtl" src="./obj/parking/ParkingLot.mtl"></a-asset-item>
        <a-marker type="pattern" id="island" registerevents url="marker/pattern-leaves-4393918_640.patt"></a-marker>
-       <a-entity camera></a-entity>
+       <a-entity camera look-controls wasd-controls>
+        <a-entity cursor="fuse: true;"
+          position="0 0 -1"
+          geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+          material="color: blue; shader: flat">
+          <a-animation begin="click" easing="ease-in" attribute="scale" dur="150"
+              fill="forwards" from="0.1 0.1 0.1" to="1 1 1"></a-animation>
+          <a-animation begin="cursor-fusing" easing="ease-in" attribute="scale" dur="1500"
+              fill="backwards" from="1 1 1" to="0.1 0.1 0.1"></a-animation>
+        </a-entity>
+      </a-entity>
    </a-scene>
-   <script>
-       AFRAME.registerComponent('registerevents',{
-           init: function(){
-               var marker = this.el;
-               // 以下、マーカーを検出時のイベント
-               marker.addEventListner('markerFound', function(){
-                   var markerId = island.id;
-                   // a-obj-model要素を生成する
-                   let parkingIns = document.createElement("a-obj-model");
-                   parkingIns.id = "parkingIns";
-                   let scene = document.getElementById("scene");
-                   // a-obj-modelをa-sceneに追加する
-                   scene.appendChild(parkingIns);
-                   // objふぁいるとmtlファイルをa-obj-model要素に追加する
-                   parkingIns.setAttribute("src", "#parkingObj");
-                   parkingIns.setAttribute("mtl", "#parkingMtl");
-                   // position, scale, positionの設定
-                   parkingIns.setAttribute("position", "0 0 -0.07");
-                    parkingIns.setAttribute("scale", "0.01 0.01 0.01");
-                    parkingIns.setAttribute("rotation", "0 270 -20");
-
-               })
-           }
-       })
-   </script>
 </body>
 </html>
