--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-     <!-- AFrameライブラリ読み込み -->
-     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-     <!-- AR.jsライブラリ読み込み -->
-     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-     <script src="./js/0223-2.js"></script>
-</head>
-<body>
-   <a-scene id="scene" embedded arjs="debugUIEnabled:false;">
-       <a-asset-item id="parkingObj" src="./obj/parking/ParkingLot.obj"></a-asset-item>
-       <a-asset-item id="parkingMtl" src="./obj/parking/ParkingLot.mtl"></a-asset-item>
-       <a-marker type="pattern" id="island" registerevents url="marker/pattern-leaves-4393918_640.patt"></a-marker>
-       <a-entity camera look-controls wasd-controls>
-        <a-entity cursor="fuse: true;"
-          position="0 0 -1"
-          geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
-          material="color: blue; shader: flat">
-          <a-animation begin="click" easing="ease-in" attribute="scale" dur="150"
-              fill="forwards" from="0.1 0.1 0.1" to="1 1 1"></a-animation>
-          <a-animation begin="cursor-fusing" easing="ease-in" attribute="scale" dur="1500"
-              fill="backwards" from="1 1 1" to="0.1 0.1 0.1"></a-animation>
-        </a-entity>
-      </a-entity>
-   </a-scene>
-</body>
+    <head>
+      <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+      <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
+      </head>
+      
+      <body style="margin:0;overflow:hidden;">
+        <!-- シーンを追加 -->
+        <a-scene embedded arjs="debugUIEnabled:false;">
+          <!-- 3DCGモデルの読み込み -->
+          <a-assets>
+            <a-asset-item id="vroid" src="asset/vroid.glb"></a-asset-item>
+          </a-assets>
+
+          <!-- 自作マーカーを追加 -->
+          <a-marker type="pattern" url="marker/pattern-QR_168738.patt">
+            <!-- 3Dモデルの呼び出し -->
+            <a-gltf-model src="#vroid"></a-gltf-model>
+          </a-marker>
+          <!-- カメラを追加 -->
+          <a-entity camera></a-entity>
+        </a-scene>
+      </body>
 </html>
