--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a-scene embedded arjs="debugUIEnabled:false;">
           <!-- 3DCGモデルの読み込み -->
           <a-assets>
-            <a-asset-item id="vroid" src="asset/vroid.glb"></a-asset-item>
+            <a-asset-item id="vroid" src="asset/vroid2.glb"></a-asset-item>
           </a-assets>
 
           <!-- 自作マーカーを追加 -->
