--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         smoothThreshold="5">
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/r-h-prog.github.io/master/assets/models/IronMan.obj"
+          obj-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/r-h-prog.github.io/master/assets/models/IronMan.obj"
               scale="5 5 5"
               position="100 100 0"
           >
