--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       <!-- the path should end with the name without the extension e.g. if file is trex.fset' the path should end with trex -->
       <a-nft
         type="nft"
-        url="../assets/images/pattern-QR_168738"
+        url="./assets/images/pattern-QR_168738"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
         smoothThreshold="5">
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
-          obj-model="../assets/models/IronMan.obj"
+          obj-model="./assets/models/IronMan.obj"
               scale="5 5 5"
               position="100 100 0"
           >
