--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       <!-- a-nft is the anchor that defines an Image Tracking entity -->
       <!-- on 'url' use the path to the Image Descriptors created before. -->
       <!-- the path should end with the name without the extension e.g. if file is trex.fset' the path should end with trex -->
+      <a-assets>
+        <a-asset-item id="IronMan-obj" src="./assets/models/IronMan.obj"></a-asset-item>
+        <a-asset-item id="IronMan-mtl" src="./assets/models/IronMan.mtl"></a-asset-item>
+      </a-assets>
       <a-nft
         type="nft"
         url="./assets/images/pattern-QR_168738"
@@ -52,7 +56,7 @@
         smoothThreshold="5">
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
-          obj-model="./assets/models/IronMan.obj"
+          obj-model="obj:#IronMan-obj; mtl:#IronMan-mtl;"
               scale="5 5 5"
               position="100 100 0"
           >
