--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
           obj-model="obj:#IronMan-obj; mtl:#IronMan-mtl;"
-              scale="5 5 5"
-              position="100 100 0"
+              scale="1 1 1"
+              position="10 10 0"
+              rotation
           >
           </a-entity>
       </a-nft>
