--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
           obj-model="obj:#IronMan-obj; mtl:#IronMan-mtl;"
-              scale="1 1 1"
+              scale=".1 .1 .1"
               position="10 10 0"
               rotation
           >
