--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <a-scene>
       <a-assets>
-        <video id="sakura" autoplay loop="true" src="sakura_D_M.mp4"></video>
+        <video id="sakura" autoplay loop="true" src="assets/sakura_D_M.mp4"></video>
       </a-assets>
     
       <a-camera>
